--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,6 +29,6 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish package
-      run: mvn --batch-mode deploy -s settings.xml
+      run: mvn --batch-mode deploy -s settings.xml -X
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
