--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Packages</name>
-      <url>https://maven.pkg.github.com/Alex1607/HamsterAPI</url>
+      <url>https://maven.pkg.github.com/Alex1607</url>
     </repository>
   </distributionManagement>
   <dependencies>
